--- a/mtp_bank_admin/templates/mtp_auth/login.html
+++ b/mtp_bank_admin/templates/mtp_auth/login.html
@@ -1,4 +1,5 @@
-{% extends 'mtp_common/auth/login.html' %}{% load i18n %}
+{% extends 'mtp_common/auth/login.html' %}
+{% load i18n %}
 
 {% block auth_title %}
   {% trans 'Bank Admin' %}
