--- a/mtp_bank_admin/templates/base.html
+++ b/mtp_bank_admin/templates/base.html
@@ -10,26 +10,33 @@
 {% endblock %}
 
 {% block page_title %}{% trans 'Bank Admin' %}{% endblock %}
-
 {% block proposition %}{% trans 'Bank Admin' %}{% endblock %}
 
-{% block proposition_menu %}
-  {% if request.user.is_authenticated %}
-    <ul id="proposition-links" class="print-hidden">
-      <li><a href="{% url 'bank_admin:dashboard' %}">{% trans 'Download files' %}</a></li>
-      {% if perms.auth.change_user %}
-        <li>
-          <a href="{% url 'list-users' %}">{% trans 'Manage users' %}</a>
-        </li>
-      {% endif %}
-      <li><a href="{% url 'password_change' %}">{% trans 'Change password' %}</a></li>
-      <li>
-        <a href="{% url 'logout' %}">
-          {% blocktrans trimmed with full_name=request.user.get_full_name|default:request.user.username %}
-            Sign out {{ full_name }}
-          {% endblocktrans %}
-        </a>
-      </li>
-    </ul>
-  {% endif %}
+
+{% block proposition_extra %}
+  <nav id="mtp-proposition-extra" class="column-full print-hidden">
+    {% spaceless %}
+      <ul id="mtp-proposition-tabs">
+        {% if request.user.is_authenticated %}
+          {% include 'bank_admin/proposition-tab.html' with view_name='bank_admin:dashboard' subview_names='bank_admin:dashboard' link_text=_('Download files') %}
+        {% else %}
+          {% include 'bank_admin/proposition-tab.html' with view_name='login' subview_names='login' link_text=_('Sign in') %}
+        {% endif %}
+        {% include 'bank_admin/proposition-tab.html' with view_name='submit_ticket' subview_names='submit_ticket feedback_success' link_text=_('Get help') %}
+      </ul>
+    {% endspaceless %}
+  </nav>
+{% endblock %}
+
+
+{% block footer_support_links %}
+  <ul>
+    <li><a href="{% url 'submit_ticket' %}">{% trans 'Get help' %}</a></li>
+    <li>
+      {% trans 'Built by' %}
+      <a href="https://mojdigital.blog.gov.uk/">
+        <abbr title="{% trans 'Ministry of Justice' %}">MOJ</abbr> Digital
+      </a>
+    </li>
+  </ul>
 {% endblock %}
