Add new url for Q&A page, create new view, create new template with Q&A content and add 2 new class to app.scss that remove spaces above and below title and paragraph.

--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -36,3 +36,13 @@
 .mtp-filelink {
   margin: 1.2em 0;
 }
+
+.no-space-under-heading {
+  margin: 0px 0px 0px 0px; 
+  padding: 0px 0px 0px 0px;
+}
+
+.no-space-above {
+ margin: 0px 0px 0px 0px; 
+ padding: 0px 0px 0px 0px;
+}
