--- a/mtp_bank_admin/templates/q_and_a/q_and_a.html
+++ b/mtp_bank_admin/templates/q_and_a/q_and_a.html
@@ -6,7 +6,7 @@
   <div class="column-full">
   	<u><h1 class="heading-large">Send money to a prisoner service - FAQs</h1></u><br>
     <u><h1 class="heading-medium no-space-under-heading">How can I send money to a prisoner using the new service?</h1></u>
-	<p class="lede no-space-above" >By <strong>bank transfer</strong> using online banking, a mobile banking app or telephone banking.<br>Directly with your <strong>debit card</strong>.</p><br>
+	<p class="lede no-space-above" >Directly with your <strong>debit card</strong>.<br>Or by <strong>bank transfer</strong> using online banking, a mobile banking app or telephone banking.</p><br>
 
     <u><h1 class="heading-medium no-space-under-heading">What bank cards can I use?</h1></u>
 	<p class="lede no-space-above" >You can use Visa, Mastercard and Maestro.</p><br>
@@ -18,7 +18,7 @@
 	<p class="lede no-space-above" >Yes. The digital service (bank transfers and debit cards) is now available to all public prisons in England and Wales.<br>The service is <strong>not</strong> available in private prisons.</p><br>
 
 	<u><h1 class="heading-medium no-space-under-heading">How long will it take for the prisoner to receive the money?</h1></u>
-	<p class="lede no-space-above" >Up to 3 working days</p><br>
+	<p class="lede no-space-above" >Up to 3 working days.</p><br>
 
 	<u><h1 class="heading-medium no-space-under-heading">Has the prisoner received my money?</h1></u>
 	<p class="lede no-space-above" >Ask the prisoner when they call you.</p><br>
@@ -31,7 +31,7 @@
 		<li>you paid cash in-branch (not allowed)</li>
 		<li>you made an international transfer (not allowed)</li>
 	</ul>
-	<p class="lede no-space-above" >You’ll <strong>ONLY</strong> get a refund if the reference you inserted for the bank transfer is incorrect OR if the prisoner has left prison</p><br>
+	<p class="lede no-space-above" >You’ll <strong>ONLY</strong> get a refund if the reference you inserted for the bank transfer is incorrect OR if the prisoner has left prison.</p><br>
 
 
 	<u><h1 class="heading-medium no-space-under-heading">How long will it take for me to get a refund from my bank transfer?</h1></u>
