Correct, clarify and add to QNA section …also use a definition list as it's perhaps more natural for this content

--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -36,3 +36,15 @@
 .mtp-filelink {
   margin: 1.2em 0;
 }
+
+.mtp-qna {
+  margin-top: 4em;
+
+  dt {
+    @include bold-24;
+  }
+
+  dd {
+    margin-bottom: 3em;
+  }
+}
