Bank transfer refunds have MTP NOMS as the sender rather than GBS RE NOMS AGENCY

--- a/mtp_bank_admin/templates/faq.html
+++ b/mtp_bank_admin/templates/faq.html
@@ -85,7 +85,7 @@
       <dt>How will I know I’ve got my refund?</dt>
       <dd>
         <p>Check your bank account 4 working days after you sent the money.</p>
-        <p>On your bank statement you’ll see the refund appear as ‘GBS RE NOMS AGENCY’.</p>
+        <p>On your bank statement you’ll see the refund appear as ‘MTP NOMS’.</p>
       </dd>
 
       <dt>How do I get my money back if I made a bank transfer in-branch or by international transfer?</dt>
