--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -46,3 +46,20 @@
     margin-bottom: 3em;
   }
 }
+
+.mtp-missed-downloads-box {
+  background: file-url('icon-important.png') no-repeat 16px 16px;
+  border: 3px solid $red;
+  padding: 1em;
+  margin-bottom: 2em;
+
+  @include device-pixel-ratio {
+    background-image: file-url('icon-important-2x.png');
+    background-size: 35px 35px;
+  }
+
+  .heading-medium {
+    margin-top: 4px;
+    padding-left: 48px;
+  }
+}
