--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -15,6 +15,51 @@
 
     {% include 'mtp_common/includes/message_box.html' %}
 
+    {% if missed_refunds or missed_adi_journals or missed_statements or missed_disbursements %}
+      <div class="mtp-missed-downloads-box">
+        <h3 class="heading-medium">{% trans 'You may have forgotten to download these files' %}</h3>
+        <p><strong>
+          {% trans 'Please download and process them before you move on to the next.' %}
+        </strong></p>
+
+        {% if missed_refunds %}
+        <p>
+          {% trans 'Refunds for:' %}
+          {% for refund_date in missed_refunds %}
+            <a href="{% url 'bank_admin:download_refund_file' %}?receipt_date={{ refund_date|date:'Y-m-d' }}">{{ refund_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
+          {% endfor %}
+        </p>
+        {% endif %}
+
+        {% if missed_adi_journals %}
+        <p>
+          {% trans 'ADI journals for:' %}
+          {% for journal_date in missed_adi_journals %}
+            <a href="{% url 'bank_admin:download_adi_journal' %}?receipt_date={{ journal_date|date:'Y-m-d' }}">{{ journal_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
+          {% endfor %}
+        </p>
+        {% endif %}
+
+        {% if missed_statements %}
+        <p>
+          {% trans 'Bank statements for:' %}
+          {% for statement_date in missed_statements %}
+            <a href="{% url 'bank_admin:download_bank_statement' %}?receipt_date={{ statement_date|date:'Y-m-d' }}">{{ statement_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
+          {% endfor %}
+        </p>
+        {% endif %}
+
+        {% if missed_disbursements %}
+        <p>
+          {% trans 'Disbursements for:' %}
+          {% for disbursement_date in missed_disbursements %}
+            <a href="{% url 'bank_admin:download_disbursements' %}?receipt_date={{ disbursement_date|date:'Y-m-d' }}">{{ disbursement_date|date:'d/m/Y' }}</a>{% if not forloop.last %}, {% endif %}
+          {% endfor %}
+        </p>
+        {% endif %}
+      </div>
+    {% endif %}
+
     <div class="container">
 
       <div class="mtp-compact__row-1">
