Add email domain name correction suggestion to email input fields

--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -1,5 +1,7 @@
 @import 'mtp-internal';
 
+@import 'elements/mailcheck-warning';
+
 // Application specific
 // Dashboard design makes page shorter so the whole page fits on a typical user screen
 
