--- a/mtp_bank_admin/templates/base.html
+++ b/mtp_bank_admin/templates/base.html
@@ -9,8 +9,8 @@
   <!-- {{ request.resolver_match.url_name }} -->
 {% endblock %}
 
-{% block page_title %}{% trans 'Bank Admin' %}{% endblock %}
-{% block proposition %}{% trans 'Bank Admin' %}{% endblock %}
+{% block page_title %}{% trans 'Bank admin' %}{% endblock %}
+{% block proposition %}{% trans 'Bank admin' %}{% endblock %}
 
 
 {% block proposition_extra %}
