Split disbursement cancellation form flow from list view

--- a/mtp_bank_admin/templates/disbursements/cancelled.html
+++ b/mtp_bank_admin/templates/disbursements/cancelled.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% load dates %}
 {% load mtp_common %}
 {% load disbursements %}
 
@@ -8,32 +7,8 @@
 
 {% block inner_content %}
   <header>
-    <h1 class="heading-xlarge">{% trans 'Cancel disbursements' %}</h1>
+    <h1 class="heading-xlarge">{% trans 'Cancelled disbursements' %}</h1>
   </header>
-
-  {% for message in messages %}
-    <div class="mtp-message mtp-message--{{ message.level_tag }}">
-      {{ message }}
-    </div>
-    <br/>
-  {% endfor %}
-
-  <p>
-    {% trans 'Enter the invoice number of the disbursement you wish to cancel.' %}
-  </p>
-
-  <form method="post" class="print-hidden">
-    {% csrf_token %}
-    {% include 'mtp_common/forms/error-summary.html' with form=form only %}
-
-    {% include 'mtp_common/forms/field.html' with field=form.invoice_number %}
-
-    <p>
-      <input id="id_submit_btn" class="button" type="submit" value="{% trans 'Next' %}">
-    </p>
-  </form>
-
-  <h3 class="heading-medium">{% trans 'Previously cancelled disbursements' %}</h3>
 
   <table class="mtp-table">
     <thead>
