Remove NOMIS refund functionality from disbursement cancellation
This is probably something that should more properly be actioned
by the prison, having been made aware of the cancellation.

--- a/mtp_bank_admin/templates/disbursements/cancel.html
+++ b/mtp_bank_admin/templates/disbursements/cancel.html
@@ -18,7 +18,7 @@
   {% endfor %}
 
   <p>
-    {% trans 'Cancelling a disbursement will refund the money to the prisoner’s NOMIS account, and notify the prison that the disbursement failed.' %}
+    {% trans 'Cancelling a disbursement will update our records and notify the prison that the disbursement failed.' %}
   </p>
 
   <form method="post">
