Zip CSV contents of private estate emails … because Mailgun API ignores supplied content type and re-encodes contents incorrectly

--- a/mtp_bank_admin/templates/bank_admin/emails/private-estate.html
+++ b/mtp_bank_admin/templates/bank_admin/emails/private-estate.html
@@ -8,7 +8,8 @@
     {% endblocktrans %}
   </p>
   <p>
-    {% trans 'Please upload this file into the CMS and make sure NO credits are rejected.' %}
+    {% trans 'Please unzip this file and upload into the CMS.' %}
+    {% trans 'Make sure NO credits are rejected.' %}
   </p>
   <p>
     {% trans 'If there’s any doubt, put credits on hold or speak with your security department.' %}
