Add a banner for IE8-only display to indicate that users should switch browser

--- a/mtp_bank_admin/templates/base.html
+++ b/mtp_bank_admin/templates/base.html
@@ -28,6 +28,11 @@
   </nav>
 {% endblock %}
 
+{% block sub_nav %}
+  {{ super }}
+
+  {% include 'mtp_common/ie-support-banner.html' %}
+{% endblock %}
 
 {% block footer_support_links %}
   <ul>
