Fix IE8 support banner including super-template content

--- a/mtp_bank_admin/templates/base.html
+++ b/mtp_bank_admin/templates/base.html
@@ -29,7 +29,7 @@
 {% endblock %}
 
 {% block sub_nav %}
-  {{ super }}
+  {{ block.super }}
 
   {% include 'mtp_common/ie-support-banner.html' %}
 {% endblock %}
