--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -6,6 +6,8 @@
 {% block page_title %}{% trans 'Download files' %} – {{ block.super }}{% endblock %}
 
 {% block inner_content %}
+  {% notifications_box request 'bankadmin_dashboard' %}
+
   <div class="mtp-compact">
     {% get_preceding_workdays 5 offset=1 as preceding_days %}
 
